--- a/webapp/www/index.css
+++ b/webapp/www/index.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
 body {
-	background-color: #FFFFD0;
+	background-color: #D0FFFF;
 
 	font-family: "Montserrat", sans-serif;
 	font-optical-sizing: auto;
